--- a/index.html
+++ b/index.html
@@ -7,14 +7,28 @@
         <title>polymer-learning-resources</title>
         <meta name="description" content="polymer-learning-resources description">
 
-        <!-- See https://goo.gl/OOhYW5 -->
+        <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <link rel="manifest" href="/manifest.json">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+        <meta name="theme-color" content="#ffffff">
 
-        <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+        <script src="/bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
 
-        <!--<link rel="import" href="bower_components/iron-ajax/iron-ajax.html">-->
-        <!--<link rel="import" href="src/polymer-learning-resources-app.html">-->
-        <link rel="import" href="src/test-app.html">
+        <!--<link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">-->
+        <link rel="import" href="/src/polymer-learning-resources-app.html">
 
         <style>
 
@@ -28,12 +42,9 @@
     <body unresolved>
 
         <!--<template is="dom-bind">-->
-
-            <!--<iron-ajax url="data/items.json" auto last-response="{{items}}"></iron-ajax>-->
-            <!--<iron-ajax url="data/featured.json" auto last-response="{{featuredItems}}"></iron-ajax>-->
-            <!--<polymer-learning-resources-app items="[[items]]" featured-items="[[featuredItems]]"></polymer-learning-resources-app>-->
-            <test-app></test-app>
-
+            <!--<iron-ajax url="/data/resources.json" auto last-response="{{resources}}"></iron-ajax>-->
+            <!--<polymer-learning-resources-app resources="[[resources]]"></polymer-learning-resources-app>-->
+            <polymer-learning-resources-app></polymer-learning-resources-app>
         <!--</template>-->
 
     </body>
